[package]
name = "roasty-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
kagi-api = "*"
anyhow = "*"
tokio = { version = "1.29.1", features = ["full"] }
futures = { version = "0.3.28" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
regex = { version = "1.9.1" }
rand = { version = "0.8.5", features = ["small_rng"] }
eos = { git = "https://github.com/Rapptz/eos.git" }
eos-tz = { git = "https://github.com/Rapptz/eos.git" }
futures-util = { version = "0.3.28" }
serde_json = { version = "1.0.104" }

# Twilight
twilight-cache-inmemory = { version = "0.15" }
twilight-gateway = { version = "0.15.4", default-features = false, features = [
    "twilight-http",
    "native",
] }
twilight-http = { version = "0.15.4", default-features = false, features = [
    "native",
] }
twilight-model = { version = "0.15.4" }
twilight-util = { version = "0.15.4", default-features = false, features = [
    "snowflake",
] }
